style.css
@font-face {
  font-family: "Gothic2";
  src: url("./assets/fonts/Gothic-II-Noc-Kruka-V2.ttf");
}

body {
  background-position: center center;
  background-size: cover;
  font-family: "Gothic2";
  font-size: 16px;
  line-height: 2;
  margin: 0;
}

.wrapper {
  align-items: flex-start;
  box-sizing: border-box;
  display: flex;
  height: 100vh;
  padding: 2.5rem 15vw;
  width: 100vw;
}

.dialog-box {
  background-color: #00000077;
  box-sizing: border-box;
  color: #e0e0e0;
  flex: 1 0 auto;
  padding: 1.75rem;
  text-align: center;
}

.dialog-text {
  color: #e0e042;
}

